--- a/suedtirol-weather/package.json
+++ b/suedtirol-weather/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-bootstrap-md": "^8.8.2",
     "hammerjs": "^2.0.8",
     "ol": "^6.1.1",
     "rxjs": "~6.4.0",
