--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-bootstrap-md": "^8.8.2",
+    "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.2.4",
     "ol": "^6.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
@@ -46,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ng2-charts-schematics": "^0.1.7",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
