Added the posibility off running in gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "suedtirol-weather",
   "version": "0.0.0",
+  "homepage": "https://rolandbernard.github.io/suedtirol-weather/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
